--- a/resume/index.html
+++ b/resume/index.html
@@ -9,13 +9,13 @@
 </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous" type="text/javascript">
 </script>
-  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.2.1/litera/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" type="text/css">
+  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.2.1/lux/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" type="text/css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" type="text/css">
 </head>
 <body>
   <div class="container">
     <div class="jumbotron">
-      <h1 class="display-1">Benjamin Cane</h1>
+      <h1 class="display-1">Ben Cane</h1>
       <hr class="my-4">
       <div class="row">
           <div class="col-md-8">
