Fixing a little typo

--- a/resume/index.html
+++ b/resume/index.html
@@ -152,7 +152,7 @@
         <p class="lead">As a Principal Engineer, I am a Vice President level Engineer for the Card Payment Network. I am responsible for designing and building the core transaction payment switch. As well as the infrastructure and software platform that enables feature teams. My focus is to build performance and resiliency within the core payment network.</p>
         <ul>
           <li>Providing mentorship to Junior and Senior Engineers through one-to-ones and internal meetups</li>
-          <li>Driving the design of a micro services and cloud native transaction processing platform. This platform must support millions of transactions with less than 100ms response times.</li>
+          <li>Driving the design of a micro/macro services and cloud native transaction processing platform. This platform must support millions of transactions with less than 100ms response times.</li>
           <li>Working with infrastructure teams to build a platform designed for availability and performance</li>
           <li>Creating specialized transaction routing and load balancing applications in Golang</li>
           <li>Spearheading the adoption of a Service Mesh using open source tools such as Consul and Envoy</li>
