Moving pubdate of stories

--- a/resume/index.html
+++ b/resume/index.html
@@ -238,9 +238,9 @@
           <div class="col-sm-6">
             <div class="card">
               <div class="card-body">
-                <h4 class="card-title">Efs2</h4>
-                <p class="card-text">Efs2 is a Open Source remote command execution tool written in Golang. It allows users to define commands to execute using a Efs2file. The format of this file is similar to a Dockerfile. The point of Efs2 is to run pre-defined commands across any number of hosts.</p>
-                <a href="https://github.com/madflojo/efs2" class="btn btn-primary"><i class="fab fa-github"></i> Source</a>
+                <h4 class="card-title">MockItOut</h4>
+                <p class="card-text">MockItOut is a simple to use HTTP stub server. With a small YAML configuration you can quickly create test end-points for HTTP APIs. Unlike other mock servers this project is language agnostic and easy to setup.</p>
+                <a href="https://github.com/madflojo/mockitout" class="btn btn-primary"><i class="fab fa-github"></i> Source</a>
               </div>
             </div>
           </div>
