--- a/index/index.html
+++ b/index/index.html
@@ -4,28 +4,27 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>Benjamin Cane</title>
-		<meta name="description" content="Distributed Systems Engineer">
- <meta property="twitter:card" content="summary_large_image">
+    <title>Benjamin Cane</title>
+    <meta name="description" content="Distributed Systems and Software Engineer">
+    <meta property="twitter:card" content="summary_large_image">
   
-  <meta property="twitter:site" content="@madflojo">
-  <meta property="twitter:creator" content="@madflojo">
+    <meta property="twitter:site" content="@madflojo">
+    <meta property="twitter:creator" content="@madflojo">
   
-  <meta property="og:site_name" content="Benjamin Cane">
-  <meta property="og:url" content="https://bencane.com">
-  <meta property="og:title" content="Benjamin Cane">
-  <meta name="image" property="og:image" content="https://bencane.com/img/bcane-train.jpg">
-  <meta property="twitter:image" content="https://bencane.com/img/bcane-train.jpg">
-  <meta property="og:description" content="Distributed Systems Engineer">
+    <meta property="og:site_name" content="Benjamin Cane">
+    <meta property="og:url" content="https://bencane.com">
+    <meta property="og:title" content="Benjamin Cane">
+    <meta name="image" property="og:image" content="https://bencane.com/img/bcane-train.jpg">
+    <meta property="twitter:image" content="https://bencane.com/img/bcane-train.jpg">
+    <meta property="og:description" content="Distributed Systems and Software Engineer">
 
-<link rel=alternate href=/feed/index.xml type=application/rss+xml title="Benjamin Cane">
-<link rel=alternate hreflang=en-us href=https://bencane.com/>
+    <link rel=alternate href=/feed/index.xml type=application/rss+xml title="Benjamin Cane">
+    <link rel=alternate hreflang=en-us href=https://bencane.com/>
 
-		<link rel="stylesheet" type="text/css" href="lib/offline-v2.css">
+    <link rel="stylesheet" type="text/css" href="lib/offline-v2.css">
 
 <!-- Global site tag (gtag.js) - Google Analytics --><script async src="https://www.googletagmanager.com/gtag/js?id=UA-3378969-11"></script><script>  window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}  gtag('js', new Date());  gtag('config', 'UA-3378969-11');</script>
-
 
 
 	</head>
@@ -86,7 +85,7 @@ specialties:
   - High Availability
 certifications:
   - Ethical Hacker
-  - Red Hat Certified Engineer v6</code></pre></div></div></div></section><section data-id="a8cdca6af6f83b296d92451abf02183e" data-background-opacity="0.4" data-background-image="benjamin-cane/0ab76b730c3f82a0b49179d4d7daab04"><div class="sl-block" data-block-type="text" style="width: 806px; left: 10px; top: 11px; height: auto;" data-block-id="68496b3c6d54ceaea9006fb7efd7c25b"><div class="sl-block-content" data-placeholder-tag="h2" data-placeholder-text="Title Text" style="z-index: 10;">
+  - Red Hat Certified Engineer v6</code></pre></div></div></div></section><section data-id="a8cdca6af6f83b296d92451abf02183e" data-background-opacity="0.4" data-background-image="benjamin-cane/0ab76b730c3f82a0b49179d4d7daab04"><div class="sl-block" data-block-type="text" style="width: 806px; left: 11px; top: 66px; height: auto;" data-block-id="68496b3c6d54ceaea9006fb7efd7c25b"><div class="sl-block-content" data-placeholder-tag="h2" data-placeholder-text="Title Text" style="z-index: 10;">
 <h2 style="text-align:left">Articles</h2>
 </div></div>
 <div class="sl-block" data-block-type="text" style="width: 903px; left: 28.5px; top: 504px; height: auto;" data-block-id="8736ff2ed0cb43c99be8d6c6e3e9f708"><div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text" style="z-index: 11; text-align: left; transition-duration: 0.6s; transition-delay: 0.6s;" data-animation-type="fade-in">
@@ -120,7 +119,7 @@ certifications:
 		</div>
 
 		<script>
-			var SLConfig = {"deck": {"id":1885060,"slug":"benjamin-cane","title":"Benjamin Cane","description":"Distributed Systems Engineer","width":960,"height":700,"margin":0.05,"visibility":"self","published_at":null,"sanitize_messages":null,"thumbnail_url":"https://s3.amazonaws.com/media-p.slid.es/thumbnails/4e743fba692ba485a69513c5cfe17a92/thumb.jpg?1594871641","view_count":0,"user":{"id":980594,"username":"madflojo","name":"Benjamin Cane","description":"Benjamin Cane is Principal Engineer at American Express. He has more than 16 years of experience with roles in both systems and software engineering. He leverages both his systems and software skills to build end-to-end platforms.","thumbnail_url":"https://www.gravatar.com/avatar/0f43618f25d8806e99569fd56d513f0a?s=140\u0026d=https%3A%2F%2Fstatic.slid.es%2Fimages%2Fdefault-profile-picture.png","paid":true,"pro":true,"lite":false,"team_id":null,"settings":{"id":2432622,"present_controls":true,"present_upsizing":true,"present_pointer":false,"present_notes":true,"default_deck_tag_id":null}},"background_transition":"slide","transition":"slide","theme_id":null,"theme_font":"opensans","theme_color":"black-orange","auto_slide_interval":0,"comments_enabled":true,"forking_enabled":false,"rolling_links":false,"center":false,"shuffle":false,"should_loop":false,"share_notes":false,"slide_number":false,"slide_count":4,"rtl":false,"version":2,"collaborative":null,"deck_user_editor_limit":3,"data_updated_at":1594871640919,"font_typekit":null,"font_google":null,"time_limit":null,"navigation_mode":"default","upsizing_enabled":true,"notes":{}}};
+			var SLConfig = {"deck": {"id":1885060,"slug":"benjamin-cane","title":"Benjamin Cane","description":"Distributed Systems Engineer","width":960,"height":700,"margin":0.05,"visibility":"self","published_at":null,"sanitize_messages":null,"thumbnail_url":"https://s3.amazonaws.com/media-p.slid.es/thumbnails/4e743fba692ba485a69513c5cfe17a92/thumb.jpg?1594967499","view_count":0,"user":{"id":980594,"username":"madflojo","name":"Benjamin Cane","description":"Benjamin Cane is Principal Engineer at American Express. He has more than 16 years of experience with roles in both systems and software engineering. He leverages both his systems and software skills to build end-to-end platforms.","thumbnail_url":"https://www.gravatar.com/avatar/0f43618f25d8806e99569fd56d513f0a?s=140\u0026d=https%3A%2F%2Fstatic.slid.es%2Fimages%2Fdefault-profile-picture.png","paid":true,"pro":true,"lite":false,"team_id":null,"settings":{"id":2432622,"present_controls":true,"present_upsizing":true,"present_pointer":false,"present_notes":true,"default_deck_tag_id":null}},"background_transition":"slide","transition":"slide","theme_id":null,"theme_font":"opensans","theme_color":"black-orange","auto_slide_interval":0,"comments_enabled":true,"forking_enabled":false,"rolling_links":false,"center":false,"shuffle":false,"should_loop":false,"share_notes":false,"slide_number":false,"slide_count":4,"rtl":false,"version":2,"collaborative":null,"deck_user_editor_limit":3,"data_updated_at":1594967498215,"font_typekit":null,"font_google":null,"time_limit":null,"navigation_mode":"default","upsizing_enabled":true,"notes":{}}};
 
 
 			// Use local fonts
