--- a/resume/blog.html
+++ b/resume/blog.html
@@ -46,6 +46,17 @@
 
 }
 </style>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-3378969-11"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-3378969-11');
+</script>
+
 </head>
 <body>
   <div class="backimg"></div>
