--- a/resume/blog.html
+++ b/resume/blog.html
@@ -69,7 +69,7 @@
       <h1 class="display-2 text-white">Benjamin Cane</h1>
       <div class="row">
           <div class="col-md-6">
-          <p class="lead text-white">Building mission-critical infrastructure and software platforms. Platforms purpose-built for performance and resiliency.</p>
+          <p class="lead text-white">Principal Engineer focused on building mission-critical infrastructure and software platforms. Platforms purpose-built for performance and resiliency.</p>
           </div>
         <div class="col-md-4">
           <ul class="list-unstyled text-white">
@@ -87,16 +87,10 @@
       <div class="col-md-6">
         <h2><i class="fas fa-user-circle"></i> About Me</h2>
 
-        <p class="lead">I spent the majority of my career building hosting platforms 
-        for mission-critical services. These platforms were purpose-built for high 
-        availability, scale, and low latency.</p> 
-        <p class="lead">Most recently, I am focused on building a cloud-native 
-        payment network. My role includes infrastructure and software architecture. 
-        I ensure the hosting platform and application are fast, scalable, and 
-        always online.</p>
-        <p class="lead">My passion is building end to end distributed systems. 
-        I enjoy designing the software, infrastructure, and all the glue in 
-        between.</p>
+        <p class="lead">Having started my career as a Systems Administrator, I spent the majority of my time building hosting platforms. These hosting platforms were 
+        purpose-built for high availability, scale, and low latency. Over the years, I've stepped further into the software engineering space.</p>
+
+        <p class="lead">Today, my passion is building end to end distributed systems. I enjoy designing the software, infrastructure, and all the glue in the middle.</p>
 
       </div>
         <div class="col-md-6">
@@ -139,7 +133,7 @@
     <hr class="my-4">
     <div class="row">
       <div class="col-md-12">
-        <h2><i class="fas fa-shield-alt"></i> Tech Cred</h2>
+        <h2><i class="fas fa-pen-fancy"></i> Content</h2>
         <div class="row">
         <div class="col-md-6">
           <div class="card">
@@ -185,7 +179,7 @@
         </div>
         </div>
         <hr class="my-4">
-        <h2><i class="fas fa-code-branch"></i> Open Source Projects</h2>
+        <h2><i class="fas fa-code-branch"></i> Projects</h2>
         <div class="row">
           <div class="col-sm-6 ">
             <div class="card">
@@ -226,6 +220,15 @@
               </div>
             </div>
           </div>
+        </div>
+
+        <hr class="my-4">
+        <div class="row">
+                  <div class="col-sm-2"></div>
+                  <div class="col-sm-8">
+                  <p class="lead d-flex justify-content-between">The thoughts and opinions expressed on this site or linked sites are my own and not of my employeer.</p>
+                  </div>
+                  <div class="col-sm-2"></div>
         </div>
 
 
