--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       <div class="row">
         <div class="col-md-8">
           <ul class="list-inline">
-            <li class="list-inline-item"><h5><a style="color: #A9BF5A" href="https://github.com/madflojo"><i class="fab fa-github"></i></a></h5></li>
-            <li class="list-inline-item"><h5><a style="color: #A9BF5A" href="https://medium.com/@madflojo"><i class="fab fa-medium"></i></a></h5></li>
-            <li class="list-inline-item"><h5><a style="color: #A9BF5A" href="https://www.linkedin.com/in/bencane/"><i class="fab fa-linkedin"></i></a></h5></li>
-            <li class="list-inline-item"><h5><a style="color: #A9BF5A" href="/talks/"><i class="fas fa-chalkboard-teacher"></i></a></h5></li>
-            <li class="list-inline-item"><h5><a style="color: #A9BF5A" href="/books/"><i class="fas fa-book"></i></a></h5></li>
+            <li class="list-inline-item"><a style="color: #A9BF5A" href="https://github.com/madflojo"><i class="fab fa-github fa-3x"></i></a></li>
+            <li class="list-inline-item"><a style="color: #A9BF5A" href="https://medium.com/@madflojo"><i class="fab fa-medium fa-3x"></i></a></li>
+            <li class="list-inline-item"><a style="color: #A9BF5A" href="https://www.linkedin.com/in/bencane/"><i class="fab fa-linkedin fa-3x"></i></a></li>
+            <li class="list-inline-item"><a style="color: #A9BF5A" href="/talks/"><i class="fas fa-chalkboard-teacher fa-3x"></i></a></li>
+            <li class="list-inline-item"><a style="color: #A9BF5A" href="/books/"><i class="fas fa-book fa-3x"></i></a></li>
           </ul>
         </div>
       </div>
